fix sidenav overflow

--- a/modules/layout/layout.module.sass
+++ b/modules/layout/layout.module.sass
@@ -2,8 +2,7 @@
 
 .page
     display: flex
-    height: 100vh
-    overflow: hidden
+    position: relative
     
     @media screen and ( max-width: 769px )
         flex-direction: column
@@ -26,6 +25,3 @@
         bottom: 44%
         right: 0
         border-right: 1px solid $yellow
-
-.content
-    width: 100%
