--- a/modules/sidenav/sidenav.module.sass
+++ b/modules/sidenav/sidenav.module.sass
@@ -4,8 +4,8 @@
 .nav
     position: relative
     z-index: 100
-    height: 100%
-    max-height: 100%
+    max-height: 100vh
+    overflow: hidden
     width: 18em
     display: flex
     flex-direction: column
@@ -24,10 +24,12 @@
     @media screen and ( max-width: 769px )
         width: 100%
         height: 90px
+        max-height: 100%
         font-size: 0.75rem
         padding: 0
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
         position: fixed
+        overflow: visible
         &[data-hidden="true"]
             max-height: 0
             overflow: hidden
@@ -139,7 +141,7 @@
             right: 0
 
             display: block
-            height: calc(100vh - 90px)
+            height: 100vh
             max-height: 0
 
             background: #000000d2
@@ -148,7 +150,7 @@
             transition: max-height 0.2s, padding 0.2s
 
         &[data-active="true"]
-            max-height: calc(100vh - 90px)
+            max-height: 100vh
 
     &__links
         display: flex
@@ -162,7 +164,7 @@
     &__bottom
         display: flex
         flex-direction: column
-        gap: 5em
+        gap: min(5em, 4vh)
         @media screen and ( max-width: 769px )
             background:#000000
             padding: 0.9375rem 0 3.4375rem
