--- a/styles/_simplebar.sass
+++ b/styles/_simplebar.sass
@@ -1,7 +1,5 @@
 [data-simplebar]
     max-height: 100vh
-    min-height: 100vh
-    height: 100vh
     width: 100%
 
 .simplebar-content
